--- a/resources/styles.css
+++ b/resources/styles.css
@@ -350,21 +350,36 @@ header h1 {
 }
 
 #group-series-cards {
-  background-color: rgb(34, 34, 36);
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  padding: 10px;
-  border-radius: 8px;
-  background: linear-gradient(to right, rgb(29, 34, 41) 0%, rgb(18, 22, 29) 80%);
-  margin-bottom: 10px;
-  transition: all 0.3s ease;
+    background-color: rgb(34, 34, 36);
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 10px;
+    border-radius: 8px;
+    background: linear-gradient(to right, rgb(29, 34, 41) 0%, rgb(18, 22, 29) 80%);
+    margin-bottom: 10px;
+    transition: all 0.3s ease;
+}
+
+.badge {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background: linear-gradient(to right, rgb(255, 2, 102) 0%, rgb(187, 0, 73) 80%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #fff;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 15px;
+    z-index: 10;
+    transition: background-color 0.3s ease, transform 0.3s ease, opacity 0.3s ease, background 1.3s ease;
 }
 
 #group-series-button {
     display: flex;
     align-items: flex-end;
-    transition: 0.4s ease-out;
     gap: 20px;
     flex-wrap: wrap;
     color: white;
@@ -376,59 +391,62 @@ header h1 {
     height: 320px;
     background-color: rgba(9, 13, 20, 0.5);
     cursor: pointer;
+    position: relative;
+    transition: all 0.3s ease, background-size 0.3s ease;
+    overflow: visible;
+}
+
+#group-series-button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    position: relative;
-    background-size: cover;
-    transition: background-color 0.3s ease, transform 0.3s ease, opacity 0.3s ease, background 1.3s ease;
-    overflow: hidden;
-    transition: all 0.3s ease, background-size 0.3 ease;
-    overflow: visible;
+    background-image: var(--bg-image);
+    z-index: 1;
+    transition: filter 0.3s ease;
+}
+
+#group-series-button.disabled{
+    /* pointer-events: none; */
+}
+
+#group-series-button.disabled::before {
+    filter: grayscale(1);
+}
+
+#group-series-button:hover::before {
+    filter: none;
 }
 
 #group-series-button:hover {
     box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
 }
 
-#group-series-button:hover:before {
-    opacity: 1;
+#group-series-button::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    transition: opacity 0.5s ease;
+    opacity: 0;
+    background: linear-gradient(to bottom, transparent 0%, rgba(18, 22, 29, 0.9) 70%);
+}
+
+#group-series-button:hover::after {
+    opacity: 0.8;
 }
 
 #group-series-button:hover .info {
     opacity: 1;
     transform: translateY(0px);
-}
-
-#group-series-button:hover::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* background-image: url('https://i.imgur.com/Uj4TeJR.png'); */
-    background-size: cover;
-    background-position: center;
-    opacity: 0.8;
-    pointer-events: none;
-    width: 100px;
-    height: 100px;
-    transition: opacity 0.3s ease;
-}
-
-#group-series-button:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    /* border-radius: 2px; */
-    z-index: 2;
-    transition: 0.5s;
-    opacity: 0;
-    background: rgba(9, 13, 20, 0.6);
-    background: linear-gradient(to bottom, transparent 0%, rgb(18, 22, 29, 0.9) 70%);
 }
 
 #group-series-button img {
