--- a/resources/styles.css
+++ b/resources/styles.css
@@ -512,6 +512,76 @@ header h1 {
     display: flex;
 }
 
+#group-search {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+    background: rgb(105, 19, 47);
+    padding: 10px;
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: rgb(233, 244, 251);
+    align-items: center;
+    transition: all 0.3s ease;
+}
+  
+#keys {
+  display: flex;
+  gap: 5px;
+  transition: all 0.3s ease;
+}
+
+#keys button {
+    /* background-color: #f0f0f0; */
+    border: none;
+    padding: 8px 12px;
+    cursor: pointer;
+    font-size: 14px;
+    color: #f0f0f0;
+    background-color: transparent;
+}
+
+#keys button:hover {
+    background: rgb(65, 2, 23);
+}
+
+#keys button.checked {
+    background: rgb(187, 0, 73);
+    background: rgb(161, 27, 72);
+}
+
+#search {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  padding-left: 10px;
+}
+
+.container-input {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 400px;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+.container-input .input {
+  flex: 1;
+  border: none;
+  outline: none;
+  font-size: 14px;
+}
+
+.container-input svg {
+  margin-left: 5px;
+}
+  
+
 .favorite-button {
     position: absolute;
     top: 10px;
