--- a/resources/styles.css
+++ b/resources/styles.css
@@ -514,6 +514,7 @@ header h1 {
 
 #group-search {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     box-sizing: border-box;
@@ -523,18 +524,20 @@ header h1 {
     font-weight: bold;
     margin-bottom: 10px;
     color: rgb(233, 244, 251);
-    align-items: center;
     transition: all 0.3s ease;
+    gap: 10px;
+    /* flex-wrap: wrap; */
+    overflow: auto;
 }
-  
+
+
 #keys {
-  display: flex;
-  gap: 5px;
-  transition: all 0.3s ease;
+    display: flex;
+    gap: 5px;
+    transition: all 0.3s ease;
 }
 
 #keys button {
-    /* background-color: #f0f0f0; */
     border: none;
     padding: 8px 12px;
     cursor: pointer;
@@ -548,39 +551,39 @@ header h1 {
 }
 
 #keys button.checked {
-    background: rgb(187, 0, 73);
     background: rgb(161, 27, 72);
 }
 
 #search {
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
-  padding-left: 10px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .container-input {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  max-width: 400px;
-  border: 1px solid #ccc;
-  padding: 5px 10px;
-  border-radius: 4px;
-  background-color: #fff;
+    display: flex;
+    align-items: center;
+    width: auto;
+    max-width: 400px;
+    min-width: 150px;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+    border-radius: 4px;
+    background-color: #fff;
+    direction: rtl;
 }
 
 .container-input .input {
-  flex: 1;
-  border: none;
-  outline: none;
-  font-size: 14px;
+    width: 100%; 
+    border: none;
+    outline: none;
+    font-size: 14px;
+    background: transparent;
+    direction: ltr;
 }
 
 .container-input svg {
-  margin-left: 5px;
+    margin-left: 0px;
 }
-  
 
 .favorite-button {
     position: absolute;
@@ -1212,6 +1215,29 @@ header h1 {
 }
 
 @media (max-width: 768px) {
+    #keys {
+        gap: 2px;
+        overflow: auto;
+    }
+
+    #keys button {
+        padding: 4px;
+        font-size: 10px;
+    }
+
+    .container-input {
+        display: flex;
+        align-items: center;
+        width: auto;
+        max-width: 400px;
+        min-width: 150px;
+        border: 1px solid #ccc;
+        padding: 5px 10px;
+        border-radius: 4px;
+        background-color: #fff;
+        direction: rtl;
+    }
+
     #group-series-button {
         width: 160px;
         height: 250px;
@@ -1241,7 +1267,7 @@ header h1 {
     }
 
     #continue-episode-button, #episode-button {
-        width: 100%; /* Usa largura total do container em mobile */
+        width: 100%;
         height: 200px;
     }
 
