--- a/resources/styles.css
+++ b/resources/styles.css
@@ -386,7 +386,7 @@ header h1 {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
-    border-radius: 4px;
+    border-radius: 8px;
     width: 220px;
     height: 320px;
     background-color: rgba(9, 13, 20, 0.5);
@@ -403,6 +403,7 @@ header h1 {
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: 8px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -435,6 +436,7 @@ header h1 {
     width: 100%;
     height: 100%;
     z-index: 2;
+    border-radius: 8px;
     transition: opacity 0.5s ease;
     opacity: 0;
     background: linear-gradient(to bottom, transparent 0%, rgba(18, 22, 29, 0.9) 70%);
@@ -528,8 +530,23 @@ header h1 {
     gap: 10px;
     /* flex-wrap: wrap; */
     overflow: auto;
+    scrollbar-width: thin;
+    scrollbar-color: rgba(0, 0, 0, 0.5) transparent;
 }
 
+#group-search::-webkit-scrollbar {
+    width: 8px; 
+}
+
+#group-search::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+#group-search::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
+    transform: translateY(10px);
+}
 
 #keys {
     display: flex;
@@ -603,7 +620,6 @@ header h1 {
 .container-input .input:-ms-input-placeholder { /* IE 10+ */
     color: #999;
 }
-
 
 .favorite-button {
     position: absolute;
@@ -1235,27 +1251,40 @@ header h1 {
 }
 
 @media (max-width: 768px) {
+    #group-search {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
     #keys {
-        gap: 2px;
-        overflow: auto;
+        /* order: 2; */
+        gap: 5px;
+        z-index: 2;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    #search {
+        /* order: 1; */
+        width: 100%;
+        justify-content: center;
+    }
+
+    .container-input {
+        width: 30px;
+    }
+
+    .container-input {
+        width: 100%;
+    }
+    .container-input:hover,
+    .container-input:focus-within {
+        width: 100%;
     }
 
     #keys button {
         padding: 4px;
         font-size: 10px;
-    }
-
-    .container-input {
-        display: flex;
-        align-items: center;
-        width: auto;
-        max-width: 400px;
-        min-width: 150px;
-        border: 1px solid #ccc;
-        padding: 5px 10px;
-        border-radius: 4px;
-        background-color: #fff;
-        direction: rtl;
     }
 
     #group-series-button {
