--- a/resources/styles.css
+++ b/resources/styles.css
@@ -19,7 +19,7 @@ html, body {
 
 body {
     background-color: rgb(18, 22, 29);
-    color: white;
+    color: rgb(233, 244, 251);
     padding: 10px;
     transition: all 0.3s ease;
 }
@@ -778,7 +778,7 @@ header h1 {
     height: 150px;
     background-color: rgb(10, 14, 20);
     border-radius: 8px;
-    padding: 20px;
+    /* padding: 20px; */
     text-align: center;
     color: white;
     cursor: pointer;
@@ -787,7 +787,17 @@ header h1 {
     background-repeat: no-repeat;
     background-size: cover;
     margin: 10px 10px 10px 0px;
-    transition: all 0.3s;
+    transition: background-image 0.3s ease-in-out, all 0.3s;
+}
+
+.episode-thumb {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
 }
 
 #continue-episode-button:hover,
@@ -800,7 +810,7 @@ header h1 {
 
 #continue-episode-button p,
 #episode-button p {
-    font-size: 14px;
+    font-size: 13px;
     color: white;
     text-align: center;
     position: absolute;
@@ -808,21 +818,21 @@ header h1 {
     left: 50%;
     transform: translateX(-50%);
     font-weight: bold;
-    background: linear-gradient(to bottom, rgb(250, 247, 228), rgb(226, 179, 127));
-    text-shadow: 2px 2px 5px rgba(145, 87, 33, 0.7);
+    background: linear-gradient(to bottom, rgb(200, 209, 214), rgb(255, 255, 255));
+    text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.7);
     -webkit-background-clip: text;
     color: transparent;
     
     /* FIX MANUAL */
     position: relative;
-    top: 90%;
+    top: 80%;
 
 }
 
 #continue-episode-button:hover p,
 #episode-button:hover p {
-    background: linear-gradient(to bottom, rgb(200, 209, 214), rgb(255, 255, 255));
-    text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.7);
+    background: linear-gradient(to bottom, rgb(250, 247, 228), rgb(226, 179, 127));
+    text-shadow: 2px 2px 5px rgba(145, 87, 33, 0.7);
     -webkit-background-clip: text;
     color: transparent;
 }
@@ -940,6 +950,25 @@ header h1 {
     text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.7);
     -webkit-background-clip: text;
     color: transparent;
+}
+
+.duration {
+    position: absolute;
+    bottom: 7px;
+    right: 7px;
+    background-color: rgba(56, 56, 56, 0.7);
+    color: white;
+    padding: 3px 9px;
+    font-size: 12px;
+    border-radius: 8px;
+}
+
+.episode-title {
+    margin-top: 0px;
+    /* margin-left: 10px; */
+    font-size: 13px;
+    text-align: left;
+    color: rgb(233, 244, 251);
 }
 
 .remove-button {
@@ -1254,6 +1283,8 @@ header h1 {
     border-bottom: 5px solid rgba(255, 255, 255, 0.5);
     border-bottom: 5px solid rgb(129, 134, 141, 0.5);
 }
+
+
 
 @media (max-width: 768px) {
     #group-search {
