--- a/resources/styles.css
+++ b/resources/styles.css
@@ -121,6 +121,24 @@ header h1 {
     font-weight: bold;
     position: relative;
     transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* max-width: 1200px; */
+    margin: 0 auto;
+}
+
+#logo {
+    width: 50px;
+    height: 50px;
+    /* margin-left: 10px; */
+}
+
+#series-name,
+#series-title {
+    flex-grow: 1;
+    text-align: center;
+    margin: 0;
 }
 
 #back-button {
@@ -525,7 +543,7 @@ header h1 {
     padding: 10px;
     font-size: 28px;
     font-weight: bold;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     color: rgb(233, 244, 251);
     transition: all 0.3s ease;
     gap: 10px;
@@ -956,11 +974,13 @@ header h1 {
     position: absolute;
     bottom: 7px;
     right: 7px;
-    background-color: rgba(56, 56, 56, 0.7);
+    background-color: rgba(25, 25, 25, 0.7);
     color: white;
-    padding: 3px 9px;
+    padding: 0px 8px;
     font-size: 12px;
-    border-radius: 8px;
+    border-radius: 12px;
+    line-height: 24px;
+    height: 24px;
 }
 
 .episode-title {
@@ -1389,5 +1409,9 @@ header h1 {
 
     #season-dropdown {
         width: 100%;
+    }
+
+    #video-overlay-header {
+        display: block;
     }
 }
