--- a/resources/styles.css
+++ b/resources/styles.css
@@ -816,6 +816,7 @@ header h1 {
     height: 100%;
     object-fit: cover;
     opacity: 0;
+    transition: opacity 0.3s ease-in;
 }
 
 #continue-episode-button:hover,
@@ -1331,8 +1332,6 @@ header h1 {
     }
 }
 
-
-
 .slide-in-right {
     animation: slideInRight 0.5s ease-out forwards;
 }
@@ -1349,6 +1348,11 @@ header h1 {
 @keyframes slideOutRight {
     0% { opacity: 1; transform: translateX(0); }
     100% { opacity: 0; transform: translateX(20px); }
+}
+
+#episode-button {
+    background-size: cover;
+    transition: background-image 0.3s ease-in;
 }
 
 
