--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1172,6 +1172,8 @@ header h1 {
     position: relative;
     width: 80%;
     height: 85%;
+    width: 100%;
+    height: 100%;
     background: black;
     padding: 10px;
     border-radius: 10px;
@@ -1280,6 +1282,15 @@ header h1 {
     cursor: pointer;
     transition: all 0.3s ease;
     background: rgb(29, 34, 41, 0.8);
+
+    opacity: 0;
+    pointer-events: none; 
+}
+
+#video-container:hover #prev-video-button,
+#video-container:hover #next-video-button {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 #prev-video-button:hover,
@@ -1289,11 +1300,13 @@ header h1 {
 }
 
 #prev-video-button {
-    left: -80px;
+    /* left: -80px; */
+    left: 30px;
 }
 
 #next-video-button {
-    right: -80px;
+    /* right: -80px; */
+    right: 30px;
 }
 
 #prev-video-button:hover .tooltip-text,
