--- a/resources/bootstrap.css
+++ b/resources/bootstrap.css
@@ -260,10 +260,10 @@
     content:"\e078"
 }
 .glyphicon-chevron-left:before{
-    content:"\e079"
+    content:"❮"
 }
 .glyphicon-chevron-right:before{
-    content:"\e080"
+    content:"❯"
 }
 .glyphicon-plus-sign:before{
     content:"\e081"
