--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1678,7 +1678,7 @@ p {
 
 #clear-all-logs-button {
     padding: 5px 10px;
-    background-color: #ff4444;
+    background-color: rgba(237, 0, 73, 0.5);
     color: white;
     border: none;
     border-radius: 4px;
@@ -1687,7 +1687,7 @@ p {
 }
 
 #clear-all-logs-button:hover {
-    background-color: #cc0000;
+    background-color: rgba(237, 0, 73, 0.8);
 }
 
 .log-entry {
@@ -1701,6 +1701,7 @@ p {
   margin-bottom: 10px;
   transition: all .3s;
   cursor: pointer;
+  border: 1px solid transparent;
 }
 
 .log-entry:hover {
@@ -1708,6 +1709,12 @@ p {
   background: rgb(39, 44, 51);
   box-shadow: 0 5px 10px rgba(0,0,0,0.5);
   transform: translateY(-2px);
+}
+
+.log-entry:has(.remove-log-button:hover) {
+    border: 1px solid rgba(237, 0, 73, 0.4);
+    box-shadow: 0 4px 10px rgba(152, 1, 39, 0.4), 0 8px 20px rgba(152, 1, 39, 0.1);
+    background-color: rgba(102, 1, 39, 0.8);
 }
 
 .log-thumb {
@@ -1784,10 +1791,6 @@ p {
 .remove-log-button:hover span {
     transform: rotate(360deg);
 }
-
-
-
-
 
 @media (max-width: 2560px) {
     #group-series-button{
