--- a/resources/styles.css
+++ b/resources/styles.css
@@ -514,6 +514,35 @@ header.scrolled {
     transition: background-color 0.3s ease, transform 0.3s ease, opacity 0.3s ease, background 1.3s ease;
 }
 
+.badge-watched {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: rgba(25, 25, 25, 0.7);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #fff;
+    padding: 5px 10px;
+    font-size: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 15px;
+    z-index: 10;
+    transition: background-color 0.3s ease, transform 0.3s ease, opacity 0.3s ease, background 1.3s ease;
+}
+
+.badge-duration {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background-color: rgba(25, 25, 25, 0.7);
+    color: white;
+    padding: 0px 8px;
+    font-size: 12px;
+    border-radius: 12px;
+    line-height: 24px;
+    height: 24px;
+}
+
 #group-series-button {
     display: flex;
     align-items: flex-end;
@@ -1091,19 +1120,6 @@ header.scrolled {
     text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.7);
     -webkit-background-clip: text;
     color: transparent;
-}
-
-.duration {
-    position: absolute;
-    bottom: 7px;
-    right: 7px;
-    background-color: rgba(25, 25, 25, 0.7);
-    color: white;
-    padding: 0px 8px;
-    font-size: 12px;
-    border-radius: 12px;
-    line-height: 24px;
-    height: 24px;
 }
 
 .episode-title {
